Add customer profile endpoint
